# OAI-audio2txt

./: .gitignore  README.md  main.py  pyproject.toml
sources/: audio_splitter.py  config.py  core.py
test/: audio_test.py  transcription_test.py
